# speq

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  TODO.md  output.fa  setup_docker.sh
dockerfiles/alpine/: cmake.dkr  install.dkr  setup.sh
dockerfiles/ubuntu/: cmake.dkr  install.dkr  setup.sh
include/: aligner.hpp  arg_parse.h  arg_parse.hpp  cereal_io.h  dispatch.hpp  file_to_map.h  file_to_map.hpp  fm_indexer.h  fm_scanner.h  indexer.h  traversal.hpp
include/graveyard/: khash_scanner.h
src/: CMakeLists.txt  aligner.cpp  arg_parse.cpp  cereal_io.cpp  dispatch.cpp  file_to_map.cpp  fm_indexer.cpp  fm_scanner.cpp  indexer.cpp  main.cpp  scanner.cpp  traversal.cpp
src/graveyard/: khash_indexer.cpp  khash_scanner.cpp
test/: genome_groupings.txt  seq.fa  seq_copy.fa
